overflow fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,8 +31,3 @@ html::-webkit-scrollbar {
 .star-cl {
   color: #ffa41c;
 }
-
-html, body {
-  width: 100vw;
-  overflow-x: hidden;
-}
